--- a/.github/workflows/waka-stat.yml
+++ b/.github/workflows/waka-stat.yml
@@ -2,8 +2,8 @@ name: Waka Stat
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    # Runs at 2am UTC+8
+    - cron: '0 18 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
